<resources>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="sort_by">Sort by</string>
    <string name="menu_item_sort_by_name_a_z">A - Z</string>
    <string name="menu_item_sort_by_name_z_a">Z - A</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_date_oldest_first">Oldest first</string>
    <string name="menu_item_sort_by_size_biggest_first">Biggest first</string>
    <string name="menu_item_sort_by_size_smallest_first">Smallest first</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_on_device">On device</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_quota">%1$s of %2$s used</string>
	<string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_fingerprint">Fingerprint lock</string>
    <string name="prefs_fingerprint_notsetup">No fingerprints have been set up.</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
    <string name="prefs_instant_upload">Instant picture uploads</string>
    <string name="prefs_instant_upload_summary">Instantly upload pictures taken by camera</string>
    <string name="prefs_instant_video_upload">Instant video uploads</string>
    <string name="prefs_instant_video_upload_summary">Instantly upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging history</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
    <string name="prefs_calendar_contacts">Sync calendar &amp; contacts</string>
    <string name="prefs_calendar_contacts_summary">Set up DAVdroid (v1.3.0+) for current account</string>
    <string name="prefs_calendar_contacts_address_resolve_error">Server address for account could not be resolved for DAVdroid</string>
    <string name="prefs_calendar_contacts_no_store_error">No Google Play store or F-Droid app installed</string>
    <string name="prefs_calendar_contacts_sync_setup_successful">Calendar &amp; contacts sync set up successfully</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
	<string name="recommend_subject">"Try %1$s on your smartphone!"</string>
	<string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">Don’t have a server yet?\nClick here to get one from a provider</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_received_piece_of_text">%1$s cannot upload a piece of text as a file.</string>
    <string name="uploader_error_message_no_file_to_upload">Received data did not include a valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">File cannot be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File to upload was not found in its location. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">An error occurred while copying the file to a temporary folder. Please try to send again.</string>
    <string name="uploader_upload_files_behaviour">Upload option:</string>
    <string name="uploader_upload_files_behaviour_move_to_nextcloud_folder">Move file to Nextcloud folder</string>
    <string name="uploader_upload_files_behaviour_only_upload">Keep file in source folder</string>
    <string name="uploader_upload_files_behaviour_upload_and_delete_from_source">Delete file from source folder</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty_headline">No files in here</string>
    <string name="file_list_empty">Upload some content or sync with your devices!</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="file_list_no_app_for_file_type">No app found for file type!</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="file_list_empty_headline_search">No results in this folder</string>
    <string name="file_list_empty_search">Try looking in another folder?</string>
    <string name="upload_list_empty_headline">No uploads available</string>
    <string name="upload_list_empty_text">Upload some content or activate instant upload!\nPlease note that currently on nightly all pending uploads are removed on reboot!</string>
    <string name="file_list_folder">folder</string>
    <string name="file_list_folders">folders</string>
    <string name="file_list_file">file</string>
    <string name="file_list_files">files</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="list_layout">List layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_back">Back</string>
    <string name="common_save">Save</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading &#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
    <string name="delete_account_warning">Delete account %s?\n\nDeleting cannot be undone.</string>
    <string name="ssl_validator_header">The identity of the site could not be verified</string>
    <string name="ssl_validator_reason_cert_not_trusted">- The server certificate is not trusted</string>
    <string name="ssl_validator_reason_cert_expired">- The server certificate expired</string>
    <string name="ssl_validator_reason_cert_not_yet_valid">- The server certificate valid dates are in the future</string>
    <string name="ssl_validator_reason_hostname_not_verified">- The URL does not match the hostname in the certificate</string>
    <string name="ssl_validator_question">Do you want to trust this certificate anyway?</string>
    <string name="empty" translatable="false" />
	<string name="log_send_history_button">Send history</string>
    <string name="select_all">Select all</string>
    <string name="share_privilege_can_share">can share</string>
    <string name="share_privilege_can_edit">can edit</string>
    <string name="share_privilege_can_edit_create">create</string>
    <string name="share_privilege_can_edit_change">change</string>
    <string name="share_privilege_can_edit_delete">delete</string>
    <string name="edit_share_unshare">Stop sharing</string>
    <string name="edit_share_done">done</string>
    <string name="action_switch_grid_view">Grid view</string>
    <string name="actionbar_search">Search</string>
    <string name="participate_testing_headline">Help us testing</string>
    <string name="participate_testing_bug_text">Found a bug? Something is odd?</string>
    <string name="participate_testing_report_text">Report an issue on Github</string>
    <string name="participate_testing_version_text">Interested in helping us testing the next Version?</string>
    <string name="participate_beta_headline">Test the nightly version</string>
    <string name="participate_beta_text">This includes all upcoming features and is very bleeding edge. Bugs/errors
        can occur and if they do, please report them to us.</string>
    <string name="participate_release_candidate_headline">Release candidate</string>
    <string name="participate_release_candidate_text">The release candidate (RC) is a snapshot of the upcoming release and it is expected to be stable. Testing your individual setup could help to ensure this. Sign up for testing on the Play store or manually look in the \"versions\" section on F-Droid.</string>
    <string name="participate_contribute_headline">Actively Contribute</string>
    <string name="participate_contribute_irc_text">Join the chat on IRC: &lt;a href="%1$s">#nextcloud-mobile&lt;/a></string>
    <string name="participate_contribute_forum_text">Help others on the &lt;a href="%1$s">forum&lt;/a></string>
    <string name="participate_contribute_translate_text">&lt;a href="%1$s">Translate&lt;/a> the app</string>
    <string name="participate_contribute_github_text">Contribute as a developer, see &lt;a href="https://github.com/nextcloud/android/blob/master/CONTRIBUTING.md">CONTRIBUTING.md&lt;/a> for details</string>
</resources>