<?xml version="1.0" encoding="utf-8"?>
<menu 	xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item 	android:id="@+id/action_open_file_with"		android:title="@string/actionbar_open_with"			android:icon="@android:drawable/ic_menu_set_as"					android:orderInCategory="1" /> 
	<item 	android:id="@+id/action_cancel_upload" 		android:title="@string/common_cancel_upload"		android:icon="@android:drawable/ic_menu_close_clear_cancel"		android:orderInCategory="1" />
	<item 	android:id="@+id/action_remove_upload" 		android:title="@string/common_remove_upload"		android:icon="@android:drawable/ic_menu_close_clear_cancel"		android:orderInCategory="1" />
	<item 	android:id="@+id/action_retry_upload" 		android:title="@string/common_retry_upload"			android:icon="@android:drawable/ic_menu_close_clear_cancel"		android:orderInCategory="1" />
	<item 	android:id="@+id/action_see_details"		android:title="@string/actionbar_see_details"		android:icon="@android:drawable/ic_menu_info_details"			android:orderInCategory="1" />

</menu>
