<?xml version="1.0" encoding="utf-8"?>
<!-- 
    ownCloud Android client application

    Copyright (C) 2012  Bartek Przybylski
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

	<TextView
		android:id="@+id/header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/ssl_validator_header"
		android:padding="5dp"
		android:textAppearance="?android:attr/textAppearanceMedium"
		 />
    
	<TextView
		android:id="@+id/reason_cert_not_trusted"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:paddingLeft="20dp"
		android:text="@string/ssl_validator_reason_cert_not_trusted"
		android:textAppearance="?android:attr/textAppearanceSmall"
		 />
	
	<TextView
		android:id="@+id/reason_cert_expired"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:paddingLeft="20dp"
		android:text="@string/ssl_validator_reason_cert_expired"
		android:textAppearance="?android:attr/textAppearanceSmall"
		 />
	
	<TextView
		android:id="@+id/reason_cert_not_yet_valid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:paddingLeft="20dp"
		android:text="@string/ssl_validator_reason_cert_not_yet_valid"
		android:textAppearance="?android:attr/textAppearanceSmall"
		 />
		
	<TextView
		android:id="@+id/reason_hostname_not_verified"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:paddingLeft="20dp"
		android:text="@string/ssl_validator_reason_hostname_not_verified"
		android:textAppearance="?android:attr/textAppearanceSmall"
		 />
	
    
	<TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:padding="5dp"
        android:text="@string/text_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

	<TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:padding="5dp"
        android:text="@string/ssl_validator_question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        >
    </TextView>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_cancel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_ok" />

    </LinearLayout>

</LinearLayout>
