<?xml version="1.0" encoding="utf-8"?>
<!--
  Nextcloud Android client application

  Copyright (C) 2016 Tobias Kaminsky
  Copyright (C) 2016 Nextcloud.

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
  License as published by the Free Software Foundation; either
  version 3 of the License, or any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU AFFERO GENERAL PUBLIC LICENSE for more details.

  You should have received a copy of the GNU Affero General Public
  License along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true">

    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_standard"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_padding">

                <TextView
                    android:id="@+id/participate_headline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_testing_headline"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/participate_testing_bug_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/standard_half_padding"
                    android:text="@string/participate_testing_bug_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/participate_testing_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_testing_report_text"
                    android:theme="@style/Button.Primary"
                    app:cornerRadius="@dimen/button_corner_radius" />

                <TextView
                    android:id="@+id/participate_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/standard_half_padding"
                    android:paddingTop="@dimen/standard_half_padding"
                    android:text="@string/participate_testing_version_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/participate_release_candidate_headline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_release_candidate_headline"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/participate_release_candidate_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_release_candidate_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/participate_release_candidate_fdroid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:onClick="onGetRCFDroidClick"
                        android:padding="@dimen/zero"
                        android:src="@drawable/fdroid"
                        android:contentDescription="@string/participate_rc_fdroid"/>

                    <ImageButton
                        android:id="@+id/participate_release_candidate_playstore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:onClick="onGetRCPlayStoreClick"
                        android:padding="@dimen/zero"
                        android:src="@drawable/playstore"
                        android:contentDescription="@string/participate_rc_play_store"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/participate_beta_headline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_beta_headline"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/participate_beta_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_beta_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/participate_beta_fdroid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:onClick="onGetBetaFDroidClick"
                    android:padding="@dimen/zero"
                    android:src="@drawable/fdroid"
                    android:contentDescription="@string/participate_dev_fdroid"/>

                <ImageButton
                    android:id="@+id/participate_beta_apk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:onClick="onGetBetaApkClick"
                    android:padding="@dimen/zero"
                    android:src="@drawable/apk"
                    android:contentDescription="@string/participate_dev_direct_download"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/participate_contribute_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_contribute_headline"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/participate_contribute_irc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_contribute_irc_text"
                    android:paddingBottom="@dimen/standard_quarter_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/participate_contribute_forum_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_contribute_forum_text"
                    android:paddingBottom="@dimen/standard_quarter_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/participate_contribute_translate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_contribute_translate_text"
                    android:paddingBottom="@dimen/standard_quarter_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/participate_contribute_github_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participate_contribute_github_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include
        layout="@layout/drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>
